working with variables tasks

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
         </script> -->
 
 		<!-- https://javascript.info/hello-world#show-an-alert-with-an-external-script -->
-        <!-- <script src="./external-alert.js"></script> -->
-        
-        
+		<!-- <script src="./external-alert.js"></script> -->
+
+		<!-- 
+		https://javascript.info/variables#working-with-variables,
+		https://javascript.info/variables#giving-the-right-name,
+		https://javascript.info/variables#uppercase-const
+
+		-->
+		<script src="./working-with-variables.js"></script>
 	</body>
 </html>
