--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
 		https://javascript.info/variables#working-with-variables,
 		https://javascript.info/variables#giving-the-right-name,
 		https://javascript.info/variables#uppercase-const
-
 		-->
-		<script src="./working-with-variables.js"></script>
+		<!-- <script src="./working-with-variables.js"></script> -->
+
+		<!-- https://javascript.info/types#string-quotes -->
+		<!-- <script src="./string-quotes.js"></script> -->
+
+		<!-- 
+		https://javascript.info/operators#the-postfix-and-prefix-forms,
+		https://javascript.info/operators#assignment-result,
+		https://javascript.info/operators#type-conversions 
+		-->
+		<script src="./operators.js"></script>
 	</body>
 </html>
