--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		https://javascript.info/operators#assignment-result,
 		https://javascript.info/operators#type-conversions 
 		-->
-		<script src="./operators.js"></script>
+		<!-- <script src="./operators.js"></script> -->
+
+		<!-- https://javascript.info/comparison#comparisons -->
+		<script src="./comparisons.js"></script>
 	</body>
 </html>
