a simple page task

--- a/simple page/simplePage.html
+++ b/simple page/simplePage.html
@@ -2,11 +2,13 @@
 
 <!DOCTYPE html>
 <html>
-	<style>
-		body {
-			background-color: pink;
-		}
-	</style>
+	<head>
+		<style>
+			body {
+				background-color: pink;
+			}
+		</style>
+	</head>
 	<body>
 		<script src="./sp-script.js"></script>
 	</body>
