--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		<!-- <script src="./operators.js"></script> -->
 
 		<!-- https://javascript.info/comparison#comparisons -->
-		<script src="./comparisons.js"></script>
+		<!-- <script src="./comparisons.js"></script> -->
+
+		<!-- https://javascript.info/ifelse#if-a-string-with-zero -->
+		<script src="./conditional-operators.js"></script>
 	</body>
 </html>
