Logical operators tasks

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 		<!-- <script src="./comparisons.js"></script> -->
 
 		<!-- https://javascript.info/ifelse#if-a-string-with-zero -->
-		<script src="./conditional-operators.js"></script>
+		<!-- <script src="./conditional-operators.js"></script> -->
+
+		<!-- https://javascript.info/logical-operators-->
+		<script src="./logical-operators.js"></script>
 	</body>
 </html>
