While. For tasks

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<!-- <script src="./conditional-operators.js"></script> -->
 
 		<!-- https://javascript.info/logical-operators-->
-		<script src="./logical-operators.js"></script>
+		<!-- <script src="./logical-operators.js"></script> -->
+
+		<!-- https://javascript.info/while-for-->
+		<script src="./while-for.js"></script>
 	</body>
 </html>
