--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 		<!-- <script src="./logical-operators.js"></script> -->
 
 		<!-- https://javascript.info/while-for-->
-		<script src="./while-for.js"></script>
+		<!-- <script src="./while-for.js"></script> -->
+
+		<!-- https://javascript.info/switch -->
+		<script src="./switch.js"></script>
 	</body>
 </html>
