--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 		<!-- <script src="./while-for.js"></script> -->
 
 		<!-- https://javascript.info/switch -->
-		<script src="./switch.js"></script>
+		<!-- <script src="./switch.js"></script> -->
+
+		<!-- https://javascript.info/function-basics -->
+		<script src="./function-basics.js"></script>
 	</body>
 </html>
