Arrow functions basics task

--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
 
 		<!-- https://javascript.info/function-basics -->
 		<script src="./function-basics.js"></script>
+
+		<!-- https://javascript.info/arrow-functions-basics -->
+		<script src="./arrow-functions-basics.js"></script>
 	</body>
 </html>
