--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
 		<!-- <script src="./switch.js"></script> -->
 
 		<!-- https://javascript.info/function-basics -->
-		<script src="./function-basics.js"></script>
+		<!-- <script src="./function-basics.js"></script> -->
 
 		<!-- https://javascript.info/arrow-functions-basics -->
-		<script src="./arrow-functions-basics.js"></script>
+		<!-- <script src="./arrow-functions-basics.js"></script> -->
+
+		<!-- https://javascript.info/coding-style -->
+		<script src="./coding-style.js"></script>
 	</body>
 </html>
