Add the last script to the comment

--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
 		<!-- <script src="./arrow-functions-basics.js"></script> -->
 
 		<!-- https://javascript.info/coding-style -->
-		<script src="./coding-style.js"></script>
+		<!-- <script src="./coding-style.js"></script> -->
 	</body>
 </html>
