--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+	</head>
 	<body>
 		<!-- https://javascript.info/hello-world#show-an-alert -->
 		<!-- 
@@ -50,5 +53,8 @@
 
 		<!-- https://javascript.info/coding-style -->
 		<!-- <script src="./coding-style.js"></script> -->
+
+		<!-- https://javascript.info/object -->
+		<!-- <script src="./object.js"></script> -->
 	</body>
 </html>
