Object methods tasks.

--- a/index.html
+++ b/index.html
@@ -56,5 +56,8 @@
 
 		<!-- https://javascript.info/object -->
 		<!-- <script src="./object.js"></script> -->
+
+		<!-- https://javascript.info/object-methods -->
+		<!-- <script src="./object-methods.js"></script> -->
 	</body>
 </html>
