Constructor, new word tasks.

--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
 
 		<!-- https://javascript.info/object-methods -->
 		<!-- <script src="./object-methods.js"></script> -->
+		<!-- https://javascript.info/constructor-new-->
+		<!-- <script src="./constructor-new.js"></script> -->
 	</body>
 </html>
