Add Primitives methods task. Refactoring.

--- a/index.html
+++ b/index.html
@@ -13,27 +13,19 @@
 		<!-- https://javascript.info/hello-world#show-an-alert-with-an-external-script -->
 		<!-- <script src="./external-alert.js"></script> -->
 
-		<!-- 
-		https://javascript.info/variables#working-with-variables,
-		https://javascript.info/variables#giving-the-right-name,
-		https://javascript.info/variables#uppercase-const
-		-->
+		<!-- https://javascript.info/variables -->
 		<!-- <script src="./working-with-variables.js"></script> -->
 
-		<!-- https://javascript.info/types#string-quotes -->
+		<!-- https://javascript.info/types -->
 		<!-- <script src="./string-quotes.js"></script> -->
 
-		<!-- 
-		https://javascript.info/operators#the-postfix-and-prefix-forms,
-		https://javascript.info/operators#assignment-result,
-		https://javascript.info/operators#type-conversions 
-		-->
+		<!-- https://javascript.info/operators -->
 		<!-- <script src="./operators.js"></script> -->
 
-		<!-- https://javascript.info/comparison#comparisons -->
+		<!-- https://javascript.info/comparison-->
 		<!-- <script src="./comparisons.js"></script> -->
 
-		<!-- https://javascript.info/ifelse#if-a-string-with-zero -->
+		<!-- https://javascript.info/ifelse -->
 		<!-- <script src="./conditional-operators.js"></script> -->
 
 		<!-- https://javascript.info/logical-operators-->
@@ -59,7 +51,11 @@
 
 		<!-- https://javascript.info/object-methods -->
 		<!-- <script src="./object-methods.js"></script> -->
+
 		<!-- https://javascript.info/constructor-new-->
 		<!-- <script src="./constructor-new.js"></script> -->
+
+		<!-- https://javascript.info/primitives-methods-->
+		<!-- <script src="./primitives-methods.js"></script> -->
 	</body>
 </html>
