--- a/index.html
+++ b/index.html
@@ -57,5 +57,7 @@
 
 		<!-- https://javascript.info/primitives-methods-->
 		<!-- <script src="./primitives-methods.js"></script> -->
+		<!-- https://javascript.info/number-->
+		<!-- <script src="./number.js"></script> -->
 	</body>
 </html>
